GNOME Bugzilla – Bug 699308
[PATCH] account: Don't crash if we don't have a language set
Last modified: 2013-04-30 14:47:14 UTC
This can at the moment happen if the user skips past the screen. --- .../pages/account/gis-account-page.c | 5 ++++- 1 files changed, 4 insertions(+), 1 deletions(-)
Created attachment 242912 [details] [review] 0001-account-Don-t-crash-if-we-don-t-have-a-language-set.patch
Review of attachment 242912 [details] [review]: OK.