account: Don't crash if we don't have a language set

This can at the moment happen if the user skips past the screen.

https://bugzilla.gnome.org/show_bug.cgi?id=699308